--- a/WebJF/static/WebJF/css/style.css
+++ b/WebJF/static/WebJF/css/style.css
@@ -33,7 +33,10 @@ h6 {
   font-family: "Raleway", sans-serif;
 }
 
-/*--------------------------------------------------------------
+
+
+
+/*-----------------------------------------------------------
 # Back to top button
 --------------------------------------------------------------*/
 .back-to-top {
@@ -86,6 +89,8 @@ h6 {
   background: rgba(42, 44, 57, 0.9);
 }
 
+
+
 #header.header-transparent {
   background: transparent;
 }
@@ -114,7 +119,7 @@ h6 {
 #header .logo img {
   padding: 0;
   margin: 0;
-  max-height: 40px;
+  max-height: 50px;
 }
 
 
@@ -150,7 +155,7 @@ h6 {
   padding: 5px 15px 7px 15px;
   margin-left: 5px;
   font-size: 14px;
-  color: #fff;
+  color: #ffffff;
   white-space: nowrap;
   transition: 0.3s;
   border-radius: 50px;
