--- a/WebJF/templates/WebJF/vizzano.html
+++ b/WebJF/templates/WebJF/vizzano.html
@@ -4,6 +4,16 @@
 
 {% block content %}
 
+
+
+<div class="embed-responsive embed-responsive-16by9">
+  <video class="embed-responsive-item" autoplay loop muted>
+    <source src="media/vizzano.video.mp4" type="video/mp4">
+  </video>
+</div>
+
+
+
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-end align-items-center">
     <div id="heroCarousel" data-bs-interval="5000" class="container carousel carousel-fade" data-bs-ride="carousel">
@@ -61,6 +71,9 @@
     </svg>
 
   </section><!-- End Hero -->
+
+
+  
 
   <main id="main">
 
