--- a/WebJF/templates/WebJF/vizzano.html
+++ b/WebJF/templates/WebJF/vizzano.html
@@ -6,84 +6,33 @@
 
 
 
-<div class="embed-responsive embed-responsive-16by9">
-  <video class="embed-responsive-item" autoplay loop muted>
-    <source src="media/vizzano.video.mp4" type="video/mp4">
-  </video>
-</div>
 
-
-
-  <!-- ======= Hero Section ======= -->
-  <section id="hero" class="d-flex flex-column justify-content-end align-items-center">
-    <div id="heroCarousel" data-bs-interval="5000" class="container carousel carousel-fade" data-bs-ride="carousel">
-
-      <!-- Slide 1 -->
-      <div class="carousel-item active">
-        <div class="carousel-container">
-          <h2 class="animate__animated animate__fadeInDown"><span>VIZZANO</span></h2>
-          <p class="animate__animated fanimate__adeInUp">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
-          <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
-        </div>
-      </div>
-
-      <!-- Slide 2 -->
-      <div class="carousel-item">
-        <div class="carousel-container">
-          <h2 class="animate__animated animate__fadeInDown">Lorem Ipsum Dolor</h2>
-          <p class="animate__animated animate__fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
-          <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
-        </div>
-      </div>
-
-      <!-- Slide 3 -->
-      <div class="carousel-item">
-        <div class="carousel-container">
-          <h2 class="animate__animated animate__fadeInDown">Sequi ea ut et est quaerat</h2>
-          <p class="animate__animated animate__fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
-          <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
-        </div>
-      </div>
-
-      <a class="carousel-control-prev" href="#heroCarousel" role="button" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon bx bx-chevron-left" aria-hidden="true"></span>
-      </a>
-
-      <a class="carousel-control-next" href="#heroCarousel" role="button" data-bs-slide="next">
-        <span class="carousel-control-next-icon bx bx-chevron-right" aria-hidden="true"></span>
-      </a>
-
+  <div style="position: relative; width: 100%; height: 100vh;">
+    <video id="video1" class="w-100 h-100" autoplay muted loop style="object-fit: cover;">
+      <source src="media/vizzano.video.mp4" type="video/webm">
+    </video>    
+    <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); text-align: center; color: white;">  
+      <h1 class="animate__animated animate__fadeInDown fw-normal display-1"><span>VIZZANO</span></h1>
+      <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
     </div>
+  </div>
 
-    <svg class="hero-waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 24 150 28 " preserveAspectRatio="none">
-      <defs>
-        <path id="wave-path" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z">
-      </defs>
-      <g class="wave1">
-        <use xlink:href="#wave-path" x="50" y="3" fill="rgba(255,255,255, .1)">
-      </g>
-      <g class="wave2">
-        <use xlink:href="#wave-path" x="50" y="0" fill="rgba(255,255,255, .2)">
-      </g>
-      <g class="wave3">
-        <use xlink:href="#wave-path" x="50" y="9" fill="#fff">
-      </g>
-    </svg>
 
-  </section><!-- End Hero -->
 
 
   
 
-  <main id="main">
 
     <!-- ======= About Section ======= -->
     <section id="about" class="about">
       <div class="container">
 
         <div class="section-title" data-aos="zoom-out">
-          <h2>JF Shoes</h2>
+          <h2>VIZZANO</h2>
           <p>Somos</p>
+          <a href="https://www.facebook.com/vizzano.ecuador" class="facebook"><i class="bx bxl-facebook display-6"></i></a>
+          <a href="https://www.instagram.com/vizzanoecuador/" class="instagram"><i class="bx bxl-instagram display-6"></i></a>
+          
         </div>
 
         <div class="row content" data-aos="fade-up">
@@ -226,5 +175,12 @@
 
     </div>
     </section><!-- End Portfolio Section -->
+
+    <script>
+      window.addEventListener('beforeunload', function() {
+        var video = document.getElementById('video1');
+        video.pause();
+      });
+    </script>
 
 {% endblock %}
